--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -39,15 +39,22 @@
         android:text="Reader"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/pdfUri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nothing"/>
+
+    <Button
+        android:id="@+id/uploadPdfButton"
+        android:layout_width="wrap_content"
+        android:text="Upload PDF"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/signOutButton"
         android:layout_width="wrap_content"
         android:text="Sign Out"
-        android:layout_height="wrap_content" />
-
-    <ListView
-        android:id="@+id/contactsList"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
