--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,7 +5,6 @@
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/contactCard"
         android:layout_width="match_parent"
@@ -48,7 +47,7 @@
     <Button
         android:id="@+id/uploadPdfButton"
         android:layout_width="wrap_content"
-        android:text="Upload PDF"
+        android:text="Upload"
         android:layout_height="wrap_content" />
 
     <Button
