Added my file recycler view

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,6 +5,11 @@
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/my_files_list"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent" />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/contactCard"
         android:layout_width="match_parent"
