--- a/app/src/main/res/layout/component_file_card.xml
+++ b/app/src/main/res/layout/component_file_card.xml
@@ -9,20 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/name_field"
+            android:id="@+id/file_name_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/contact_card_name_label"/>
-        <TextView
-            android:id="@+id/email_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/contact_card_email_label"/>
-        <TextView
-            android:id="@+id/phone_field"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/contact_card_phone_label"/>
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
 
