--- a/app/src/main/res/layout/fragment_writer.xml
+++ b/app/src/main/res/layout/fragment_writer.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/file_path_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Writer"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="244dp" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="Writer" />
+</LinearLayout>
