--- a/app/src/main/res/layout/fragment_writer.xml
+++ b/app/src/main/res/layout/fragment_writer.xml
@@ -2,11 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/file_path_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Writer" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
