--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -26,10 +22,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/dashboard_quick_share"
                     android:layout_marginBottom="15dp" />
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/my_files_list"
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent" />
+
             </LinearLayout>
 
             <View
@@ -38,6 +31,7 @@
                 android:background="@android:color/black"/>
 
             <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="20dp"
@@ -50,6 +44,10 @@
                     android:text="@string/dashboard_my_files"
                     android:layout_marginBottom="15dp" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/my_files_list"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent" />
 
             </LinearLayout>
 
@@ -90,7 +88,7 @@
                 android:id="@+id/pdfUri"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nothing"/>
+                android:text="Nothing..."/>
 
             <Button
                 android:id="@+id/uploadPdfButton"
@@ -106,4 +104,4 @@
 
         </LinearLayout>
     </ScrollView>
-</LinearLayout>
+</layout>
