--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -33,15 +33,15 @@
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="16dp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     style="@style/H1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/dashboard_my_files"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="16dp"
                     android:layout_marginBottom="15dp" />
 
                 <androidx.recyclerview.widget.RecyclerView
