--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -11,38 +13,102 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="20dp">
-                <TextView
-                    style="@style/AllCaps"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dashboard_quick_share"
-                    android:layout_marginBottom="15dp" />
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:padding="20dp">-->
+<!--                <TextView-->
+<!--                    style="@style/AllCaps"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="@string/dashboard_quick_share"-->
+<!--                    android:layout_marginBottom="15dp" />-->
 
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@android:color/black"/>
+<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    style="@style/H1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/dashboard_my_files"
+                <LinearLayout
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginVertical="16dp"
-                    android:layout_marginBottom="15dp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/Title"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/app_name" />
+
+                    <ImageButton
+                        android:src="@drawable/ic_log_out"
+                        android:padding="10dp"
+                        android:background="@drawable/rounded_corner"
+                        android:id="@+id/signOutButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <com.google.android.material.card.MaterialCardView
+                    app:strokeWidth="1dp"
+                    app:strokeColor="@color/black"
+                    android:id="@+id/contactCard"
+                    app:cardCornerRadius="8dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:padding="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            style="@style/H2"
+                            android:text="Contact Card"
+                            android:layout_marginBottom="8dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            style="@style/Body"
+                            android:id="@+id/name_field"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="@string/contact_card_name_label"/>
+                        <TextView
+                            style="@style/Body"
+                            android:id="@+id/email_field"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="@string/contact_card_email_label" />
+                        <TextView
+                            style="@style/Body"
+                            android:id="@+id/phone_field"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            tools:text="@string/contact_card_phone_label"/>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <LinearLayout
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        style="@style/H1"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_vertical"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="@string/dashboard_my_files" />
+                </LinearLayout>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/my_files_list"
@@ -50,47 +116,28 @@
                     android:layout_height="wrap_content"
                     android:layout_width="match_parent" />
 
-            </LinearLayout>
-
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/contactCard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
                 <LinearLayout
+                    android:layout_marginVertical="30dp"
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/emptyListPlaceholder"
                     android:orientation="vertical"
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/name_field"
+                    <ImageView
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_confused"
+                        android:layout_marginBottom="10dp"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_card_name_label"/>
+                        android:layout_height="wrap_content" />
+
                     <TextView
-                        android:id="@+id/email_field"
+                        style="@style/H3"
+                        android:text="Press the + to upload your files"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_card_email_label"/>
-                    <TextView
-                        android:id="@+id/phone_field"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/contact_card_phone_label"/>
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
 
-            <Button
-                android:id="@+id/readerButton"
-                android:layout_width="wrap_content"
-                android:text="Reader"
-                android:layout_height="wrap_content" />
-
-            <Button
-                android:id="@+id/signOutButton"
-                android:layout_width="wrap_content"
-                android:text="Sign Out"
-                android:layout_height="wrap_content" />
-
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </layout>
