--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Title" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/delagothicone</item>
+        <item name="android:textColor">@color/title_color</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
     <style name="H1" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/opensans_bold</item>
         <item name="android:textColor">@color/text_primary</item>
         <item name="android:textSize">24sp</item>
+    </style>
+    <style name="H2" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/opensans_medium</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="H3" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/opensans_medium</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="Body" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/opensans_regular</item>
+        <item name="android:textColor">@color/text_primary</item>
+        <item name="android:textSize">14sp</item>
+    </style>
     <style name="AllCaps" parent="TextAppearance.AppCompat">
+        <item name="fontFamily">@font/opensans_semibold</item>
         <item name="android:textColor">@color/text_primary</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
