--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/read_fab"
         app:layout_constraintEnd_toEndOf="@+id/read_fab"
-        app:srcCompat="@drawable/ic_home"
+        app:srcCompat="@drawable/ic_upload"
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -38,7 +38,7 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/fab"
         app:layout_constraintEnd_toEndOf="@+id/fab"
-        app:srcCompat="@drawable/ic_home"
+        app:srcCompat="@drawable/ic_nfc"
         app:tint="@color/white" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
