--- a/app/src/main/res/layout/component_file_card.xml
+++ b/app/src/main/res/layout/component_file_card.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="8dp"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/black"
     android:layout_marginHorizontal="20dp"
     android:layout_marginVertical="5dp"
     android:layout_width="match_parent"
@@ -17,10 +19,7 @@
             android:id="@+id/file_preview"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
-<!--        <ImageView-->
-<!--            android:src="@drawable/googleg_disabled_color_18"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content" />-->
+
         <LinearLayout
             android:orientation="vertical"
             android:padding="10dp"
@@ -37,12 +36,13 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    style="@style/Body"
                     android:layout_marginStart="10dp"
                     android:layout_gravity="center_vertical"
                     android:id="@+id/file_name_field"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/contact_card_name_label"/>
+                    tools:text="@string/contact_card_name_label"/>
 
             </LinearLayout>
         </LinearLayout>
