--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="icon_primary">@color/black</color>
 
     <color name="text_primary">@color/black</color>
+    <color name="title_color">#1E7FD8</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
