--- a/app/src/main/res/layout/component_accessor_card.xml
+++ b/app/src/main/res/layout/component_accessor_card.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+app:cardCornerRadius="8dp"
+app:strokeWidth="1dp"
+app:strokeColor="@color/black"
+android:layout_marginHorizontal="20dp"
+android:layout_marginVertical="5dp"
+android:layout_width="match_parent"
+android:layout_height="wrap_content">
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            style="@style/Body"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_vertical"
             android:id="@+id/accessor_id"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/contact_card_name_label"/>
+            tools:text="@string/contact_card_name_label"/>
+
+        <ImageButton
+            android:id="@+id/remove_accessor_button"
+            android:layout_gravity="center_vertical"
+            android:background="@color/white"
+            android:src="@drawable/ic_x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
+</LinearLayout>
 </com.google.android.material.card.MaterialCardView>
+
 
