--- a/app/src/main/res/layout/fragment_file_management.xml
+++ b/app/src/main/res/layout/fragment_file_management.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <ImageView
@@ -11,24 +11,37 @@
         android:layout_height="250dp" />
 
     <LinearLayout
+        android:layout_marginVertical="15dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="15dp"
             android:id="@+id/file_icon"
             android:src="@drawable/ic_unknown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
+            style="@style/H1"
             android:id="@+id/file_name_field"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="File Name"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginBottom="5dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            style="@style/H3"
+            android:text="@string/shared_with"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
-    <TextView
-        android:text="@string/shared_with"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/accessors"
