--- a/app/src/main/res/layout/fragment_shared.xml
+++ b/app/src/main/res/layout/fragment_shared.xml
@@ -10,13 +10,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="20dp">
-            <TextView
-                style="@style/H1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/shared_title" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    style="@style/H1"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/shared_title" />
+            </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/shared_files"
