--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="error">#E50000</color>
-    <color name="success">#B9EEA7</color>
+    <color name="success">#7AD868</color>
 </resources>
