--- a/app/src/main/res/layout/fragment_shared.xml
+++ b/app/src/main/res/layout/fragment_shared.xml
@@ -31,6 +31,28 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent" />
 
+            <LinearLayout
+                android:layout_marginVertical="30dp"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/emptyListPlaceholder"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/ic_confused"
+                    android:layout_marginBottom="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    style="@style/H3"
+                    android:textAlignment="center"
+                    android:text="No shared files \nPress the + to receive files."
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
