--- a/app/src/main/res/layout/component_accessor_card.xml
+++ b/app/src/main/res/layout/component_accessor_card.xml
@@ -8,7 +8,7 @@ app:strokeWidth="1dp"
 app:strokeColor="@color/black"
 android:layout_marginHorizontal="20dp"
 android:layout_marginVertical="5dp"
-android:layout_width="match_parent"
+android:layout_width="wrap_content"
 android:layout_height="wrap_content">
 <LinearLayout
     android:orientation="vertical"
@@ -36,7 +36,8 @@ android:layout_height="wrap_content">
             android:background="@color/white"
             android:src="@drawable/ic_x"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"/>
     </LinearLayout>
 </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
