--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -19,6 +19,11 @@
         android:layout_height="wrap_content"
         android:text="@string/sign_up" />
 
+    <Button
+        android:id="@+id/anonSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up" />
 
     <LinearLayout
         android:layout_width="match_parent"
