--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/black">
 
     <com.pradeep.form.simple_form.presentation.SimpleFormView
         android:id="@+id/simpleForm2"
@@ -18,19 +19,6 @@
         android:layout_height="match_parent"
         android:background="@color/black">
 
-        <Button
-            android:id="@+id/signUpButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sign_up"
-            android:background= "@color/black" />
-
-        <Button
-            android:id="@+id/anonSignIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Anon Sign Up"
-            android:background= "@color/black" />
 
 <!--        <Button-->
 <!--            android:id="@+id/signInAnon"-->
@@ -38,6 +26,20 @@
 <!--            android:layout_height="wrap_content"-->
 <!--            android:text="@string/sign_in" />-->
     </LinearLayout>
+
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up"
+        android:background= "@color/black" />
+
+    <Button
+        android:id="@+id/anonSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anon Sign Up"
+        android:background= "@color/black" />
 
 
 </LinearLayout>
