--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -14,6 +14,22 @@
 
     </com.pradeep.form.simple_form.presentation.SimpleFormView>
 
+    <Button
+        android:id="@+id/signUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sign_up"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:background= "@color/black" />
+
+    <Button
+        android:id="@+id/anonSignIn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Anon Sign Up"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:background= "@color/black" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -27,21 +43,7 @@
 <!--            android:text="@string/sign_in" />-->
     </LinearLayout>
 
-    <Button
-        android:id="@+id/signUpButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up"
-        android:gravity="center"
-        android:background= "@color/black" />
 
-    <Button
-        android:id="@+id/anonSignIn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Anon Sign Up"
-        android:gravity="center"
-        android:background= "@color/black" />
 
 
 </LinearLayout>
