changing button names

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -26,7 +26,7 @@
         android:id="@+id/anonSignIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Anon Sign Up"
+        android:text="Anon Sign In"
         android:layout_gravity="center_vertical|center_horizontal"
         android:background= "@color/black" />
 
