--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -26,7 +26,7 @@
                     android:id="@+id/signInAnon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/sign_in" />
+                    android:text="Go to Sign In" />
         </LinearLayout>
 
 
