--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,30 +4,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-        <!--<Button
-            android:id="@+id/signInButton"
+
+        <TextView
+            style="@style/Title"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign In" /> -->
+            android:text="@string/app_name" />
+
         <com.pradeep.form.simple_form.presentation.SimpleFormView
             android:id="@+id/simpleForm"
             android:layout_width="wrap_content"
-            android:layout_height="375dp"
-            android:background="@color/black">
+            android:layout_height="wrap_content" />
 
-        </com.pradeep.form.simple_form.presentation.SimpleFormView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/black">
-
-                <Button
-                    android:id="@+id/signInAnon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Go to Sign In" />
-        </LinearLayout>
-
-
+        <Button
+            android:id="@+id/signInAnon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go to Sign In" />
 </LinearLayout>
